Revise README for Advanced Student Manager
Updated project description and features in README.