@@ -1,23 +1,22 @@
-<<<<<<< HEAD
-## Getting Started
+# 🎓 Advanced Student Manager (JavaFX)
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+A modern JavaFX-based application to manage student records with an interactive UI, animations, and data visualization.
 
-## Folder Structure
+## ✨ Features
+- Add / Delete Students
+- Search Functionality
+- Statistics (Average, Highest, Lowest)
+- Interactive Bar Chart
+- Clean UI with CSS styling
+- Smooth animations
 
-The workspace contains two folders by default, where:
+## 🛠 Technologies Used
+- Java
+- JavaFX
+- CSS
 
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
+## ▶️ How to Run
 
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
-
-> If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
-
-## Dependency Management
-
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
-=======
-# CodeTech-Advanced-Student-Manager
-The Student Grade Management System is a modern Java-based desktop application developed using JavaFX. It allows users to efficiently manage student records, calculate academic performance, and generate real-time statistical insights such as average, highest, and lowest marks.
->>>>>>> 7629ae5cbd3346d9176728641e9d296917830231
+```bash
+javac --module-path "PATH_TO_FX/lib" --add-modules javafx.controls Main.java Student.java
+java --module-path "PATH_TO_FX/lib" --add-modules javafx.controls Main
